# learning

./: .RData  .init.R.swp  .inputrc  CNAME  Markov_Chain_Stationary_Distributions.R  README.md  Untitled.ipynb  Untitled1.ipynb  autosearch.R  bind.bash  debug.R  derivative.ipynb  globalenv.json  index.md  init.R  inverse_mat.ipynb  issue.md  issues_comment.md  languageserver.r  last.dump.rda  lintr.R  main.env  map.ipynb  plot.ipynb  test_source.py  vsc.R  workspace.code-workspace
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  derivative-checkpoint.ipynb  inverse_mat-checkpoint.ipynb  plot-checkpoint.ipynb
BrickSet/: digitalocean.py
C/: README.md
C/Duff_Device_special_switch_use/: minimal_memory-layout  test.c
C/Memory_Layout/: memory-layout  min.c  minimal_memory-layout
C/coroutines/: minimal_memory-layout  static.c
assert/src/: Capacity.cpp
base/class/: Method_Overriding.ipynb  example_1.py
base/yield_Coroutines/: sample1.py
bind/src/: bind.cpp
blog/: minimal_example.R
book/book/: items.py  pipelines.py  settings.py
calc_func_run_time/src/: Capacity.cpp  test.cpp
cloudsigma/: test.py
color_cmd_info/: CMakeLists.txt
color_cmd_info/include/: sign.h
color_cmd_info/src/: sign.cpp
crawl_files/: README.md
deleted_private_member_&_with_chrono_milliseconds_&_typeid/: CMakeLists.txt
deleted_private_member_&_with_chrono_milliseconds_&_typeid/src/: Capacity.cpp
distribution/: 2_chi-square.R  2_chi.Rmd  chi-square.R
geo/: Raster.R  raster.Rmd
inheritance/: CMakeLists.txt
inheritance/.cache/clangd/index/: Capacity.cpp.104E217707F73CC8.idx  Capacity.cpp.58FA48AA10C5EC36.idx  Capacity.cpp.5E5A2F32D4932E1A.idx  Capacity.cpp.801C5D0353CEEC5C.idx
inheritance/src/: Capacity.cpp
init/: check_package.R
jacobian/: jacobian_mat.ipynb
login/: test.py
map/: Untitled.ipynb  main.ipynb  test.html  vega.json
misc/: debug.R
mul_links/: scrapy.cfg  test_links.csv
nullptr/: CMakeLists.txt
paper/: wood_decay.R
plot/: multiple_plots.R  plot.ipynb  pyplot.ipynb
protected_member/: CMakeLists.txt
pseudocode/: test.Rmd  test.html
py_integration/: 1test.Rmd  2test.Rmd  test.R  test.Rmd
renv/: init.R
rvalue/: CMakeLists.txt
sampling/: Markov_Chain_Stationary_Distributions.R  Markov_Rmd.R  S3method.R  markov.Rmd  markov.html  markov.md  markov_2.R  markov_calc.Rmd  markov_shiny_bug.Rmd  stationary_distribution.Rmd
share_ptr/: CMakeLists.txt
share_ptr/.cache/clangd/index/: cast.cpp.66F44534381B2086.idx  sign.cpp.33BFCD6CEA8CFC4B.idx
share_ptr/src/: cast.cpp  sign.cpp
static/: CMakeLists.txt
static/.cache/clangd/index/: class_no_static.cpp.0558F8C1AC5DC189.idx  class_static.cpp.C7B028FA46138B21.idx  sign.cpp.0E5E1E75B2A56E98.idx  sign.cpp.4D9C3F421C64E213.idx  static_class_member.cpp.7D92C6B94F49B1FB.idx
static/src/: sign.cpp  static_class_member.cpp
tutorial/: more.csv
yaml/: CMakeLists.txt
yaml/.cache/clangd/index/: sign.h.C97F110EF69BC1BE.idx
yaml/include/: sign.h
yaml/src/: sign.cpp
(+135 files in other folders)
